2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1460195:
	* source/org/jfree/chart/entity/ChartEntity.java
	(getImageMapAreaTag): Add 'nohref' attribute when there is no URL,
	(equals): Reorganised,
	(hashCode): Implemented.

2007-12-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/xy/XYSeriesCollection.java
	(getSeries(Comparable)): New method,
	* tests/org/jfree/data/xy/junit/XYSeriesCollectionTests.java
	(testGetSeriesByKey): New test method.
	
2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/xy/XYDataItem.java
	(getXValue): New method,
	(getYValue): Likewise,
	(toString): Likewise.
	
2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/LocalizationBundle_it.properties:
	Fixed errors.
	
2007-11-29  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/MeterPlot.java
	(writeObject): Handle dialOutlinePaint,
	(readObject): Likewise,
	* tests/org/jfree/chart/plot/junit/MeterPlotTests.java
	(testEquals): Updated to test dialOutlinePaint,
	(testSerialization1): Likewise.

2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/ComparableObjectSeries.java
    (clear): Changed from protected to public,
    * source/org/jfree/data/xy/VectorSeries.java
    (clear): Removed,
    * tests/org/jfree/data/time/ohlc/junit/OHLCSeriesTests.java
    (testClear): New test method,
    * tests/org/jfree/data/xy/junit/VectorSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/XIntervalSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/XYIntervalSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/YIntervalSeriesTests.java
    (testClear): Likewise.
    
2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java: